2002-08-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (select_menu_item):
	(paint_menu):
	fixed a redrawing problem with H/Vgradient menu faces
	(MenuInteraction):
	fixed a minor problem w/ entering submenus via keyboard

2002-08-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_ResizeMove):
	(CMD_Resize):
	(CMD_Maximize):
	commands can be used on iconified windows again

2002-08-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	increased version to 2.4.10

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.9

	* fvwm/bindings.c (update_nr_buttons):
	(ParseBinding):
	fixed sluggish binding commands

	* fvwm/style.c (CMD_Style):
	bug fix in style parsing

2002-08-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (focus_grab_buttons):
	fixed a bug in button ungrabbing

2002-08-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c: (AddBinding):
	another attempt at handling "unknown" modifiers in key bindings

2002-08-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_window):
	* fvwm/stack.c (is_on_top_of_layer_ignore_rom):
	* fvwm/focus.c (focus_grab_buttons):
	fixed core dump

2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (AddBinding):
	fixed handling of "unknown" modifiers in key bindings

2002-08-02  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/Makefile.am:
	DESTDIR fix

2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed negative arguments for unmanaged windows

2002-07-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed compilation problem w/ backported fix from 2.5.3

	* fvwm/decorations.c (SelectDecor):
	removed debug fprintf

2002-07-22  Bob Woodside  <dumbledore@woodsway.com>

	* fvwm/placement.c (PlaceWindow):
	Fixed interaction between CascadePlacement and StartsOnPage

2002-07-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (move_window_doit):