@@ -1,3 +1,8 @@
+2002-08-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (paint_menu):
+	fixed drawing of SidePic menu background when not using SideColor
+
 2002-08-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (select_menu_item):
